# uniqueone-appchain

./: .gitignore  .gitmodules  Cargo.toml  README.md  chain-spec-plain.json  rustfmt.toml
.maintain/docker/: Dockerfile  build-image.sh  create-network.sh  docker-compose.yml  injected-binnary.Dockerfile  start-docker-compose.sh  stop-docker-compose.sh
cli/: Cargo.toml
cli/res/: octopus-testnet.json
cli/src/: benchmarking.rs  chain_spec.rs  command.rs  service.rs
docs/: functions.md  stagingChainSpec.json  stagingRawChainSpec.json  types.json
executor/: Cargo.toml
executor/src/: lib.rs
node/: Cargo.toml
node/chain-extension/: Cargo.toml
node/res/: octopus-human-readable-testnet.json  octopus-testnet.json
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/chain-extension/: Cargo.toml
pallets/chain-extension/src/: lib.rs
pallets/currencies/: Cargo.toml
pallets/currencies/src/: lib.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs  weights.rs
pallets/octopus-appchain/: Cargo.toml
pallets/octopus-appchain/src/: lib.rs  mainchain.rs  mock.rs  tests.rs
pallets/octopus-bridge/: Cargo.toml
pallets/octopus-bridge/benchmarking/: Cargo.toml
pallets/octopus-bridge/src/: lib.rs
pallets/octopus-lpos/: Cargo.toml
pallets/octopus-lpos/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
pallets/octopus-support/: Cargo.toml
pallets/octopus-support/src/: lib.rs  traits.rs  types.rs
pallets/octopus-upward-messages/: Cargo.toml
pallets/octopus-upward-messages/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs
pallets/unet-auction/: Cargo.toml
pallets/unet-auction/src/: benchmarking.rs  lib.rs  types.rs  utils.rs  weights.rs
pallets/unet-config/: Cargo.toml
pallets/unet-config/src/: benchmarking.rs  lib.rs  weights.rs
pallets/unet-nft/: Cargo.toml
pallets/unet-nft/src/: benchmarking.rs  default_weight.rs  impl_nonfungibles.rs  lib.rs  utils.rs  weights.rs
pallets/unet-order/: Cargo.toml
pallets/unet-order/src/: benchmarking.rs  lib.rs  utils.rs  weights.rs
pallets/unet-orml-currencies/: Cargo.toml
pallets/unet-orml-currencies/src/: default_weight.rs  lib.rs
pallets/unet-orml-nft/: Cargo.toml
pallets/unet-orml-nft/src/: lib.rs
pallets/unet-orml-tokens/: Cargo.toml
pallets/unet-orml-tokens/src/: default_weight.rs  imbalances.rs  lib.rs
pallets/unet-orml-traits/: Cargo.toml
pallets/unet-orml-traits/src/: account.rs  arithmetic.rs  auction.rs  currency.rs  data_provider.rs  get_by_key.rs  lib.rs  nft.rs  price.rs  rewards.rs
pallets/unet-orml-utilities/: Cargo.toml
pallets/unet-orml-utilities/src/: iterator.rs  lib.rs  ordered_set.rs
pallets/unet-orml-utilities/src/offchain_worker/: mod.rs
pallets/unet-rpc/: Cargo.toml
pallets/unet-rpc/runtime-api/: Cargo.toml
pallets/unet-rpc/runtime-api/src/: lib.rs
pallets/unet-rpc/src/: lib.rs
pallets/unet-traits/: Cargo.toml
pallets/unet-traits/contract-types/: Cargo.toml
pallets/unet-traits/contract-types/src/: lib.rs
pallets/unet-traits/src/: constants_types.rs  lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/debug/src/: lib.rs
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs  test_uniques_pallet.json
runtime/src/weights/: mod.rs  pallet_nft.rs
scripts/: nodes_list.txt
