[profile.release]
panic = 'unwind'

[workspace]
members = [
    "node",
	"node/chain-extension",
	"pallets/unet-orml-utilities",
	"pallets/unet-orml-traits",
	"pallets/unet-orml-nft",
	"pallets/unet-orml-tokens",
	"pallets/unet-orml-currencies",
	"pallets/unet-traits",
	"pallets/unet-nft",
	"pallets/unet-rpc",
	"pallets/unet-rpc/runtime-api",
	"pallets/unet-config",
	"pallets/unet-order",
	"pallets/unet-auction",
	"pallets/octopus-support",
	"pallets/octopus-upward-messages",
	"pallets/octopus-lpos",
	"pallets/octopus-appchain",
	"runtime",
]
